--- a/css/app.css
+++ b/css/app.css
@@ -13,7 +13,7 @@ body {
 
 
 .loc-txtfield {
-    display: block;
+    display: none;
     position: absolute;
     width: 200px;
     top: 10px;
@@ -28,14 +28,5 @@ body {
 #loc-in-lng {
     top: 30px;
 }
-
-#loc-out-lat {
-    top: 50px;
-}
-
-#loc-out-lng {
-    top: 70px;
-}
-
 
 
